I have fixed the menu card alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -329,6 +329,7 @@ img{
 
 /*========== MENU ==========*/
 .menu__container{
+  display: flex;
   justify-content: center;
 }
 
